results/SpecGenBench/4-shot/log-StrPalindrome-2023_11_05_21_35_46.txt
public class StrPalindrome {
   
   //@ ensures \result == true <==> (\forall int i; 0 <= i && i < str.length(); str.charAt(i) == str.charAt(str.length() - 1 - i));
   public boolean isPalindrome(String str) {
      String reverse = "";
      
      int length = str.length();

      //@ maintaining reverse.equals(\old(str.substring(i+1))) && 0 <= i && i <= length;
      //@ decreases i;
      for (int i = length - 1; 0 <= i; i--) {
         reverse = reverse + str.charAt(i);
      }
      
      return reverse.equals(str);
   }

}
/home/max/Documents/JMLGPT/tmp/StrPalindrome.java:9: error: cannot find symbol
      //@ maintaining reverse.equals(\old(str.substring(i+1))) && 0 <= i && i <= length;
                                                        ^
  symbol:   variable i
  location: class StrPalindrome
1 error

